# mattermost-backup

./: .gitignore  README.md  secrets.json.template  setup.cfg
mattermostbackup/: __init__.py
