[metadata]
name = mattermostbackup
version = 0.0.1
author = Thomas Bischof
author_email = tsbischof@gmail.com
url = https://github.com/tsbischof/mattermost-backup

[options]
install_requires = 
  mattermostdriver
  jsonschema

packages = find:
exclude = mattermostbackup.tests

[options.entry_points]
console_scripts = 
  mattermost-backup = mattermostbackup:main
